# TwitterShitposting

./: README.md  pyproject.toml
shitpost_srv/api/: __init__.py  api.py
shitpost_srv/generator/: model.py
