[tool.poetry]
name = "shitpost_srv"
version = "0.1.0"
description = ""
authors = ["DimaSter51"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.10.2"
requests = "^2.26.0"
twint = "^2.1.20"
fastapi = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
